--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@types/styled-components": "^5.1.34",
     "lucide-react": "^0.452.0",
     "next": "14.2.15",
