--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@types/styled-components": "^5.1.34",
+    "cloudinary": "^2.5.1",
     "lucide-react": "^0.452.0",
     "next": "14.2.15",
     "next-cloudinary": "^6.14.2",
