--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.21.0",
     "@types/styled-components": "^5.1.34",
     "cloudinary": "^2.5.1",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.452.0",
     "next": "14.2.15",
     "next-cloudinary": "^6.14.2",
